# mcp-client-for-testing

./: README.md  client.py  pyproject.toml
